--- a/app/src/main/res/layout/all_category_list.xml
+++ b/app/src/main/res/layout/all_category_list.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_height="wrap_content">
 
@@ -14,10 +15,12 @@
         android:layout_margin="@dimen/_10sdp"
         android:textSize="@dimen/_20ssp"/>
 
-    <!--<androidx.recyclerview.widget.RecyclerView
+    <androidx.recyclerview.widget.RecyclerView
+        android:orientation="horizontal"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         android:id="@+id/categoryListRecyclerId"
         android:layout_margin="@dimen/_10sdp"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>-->
+        android:layout_height="wrap_content"/>
 
 </LinearLayout>
